  to file. (Ilia)
- Fixed a crash inside PDO when trying instantiate PDORow manually. (Felipe)
- Fixed build failure of ext/mysqli with libmysql 6.0 - missing rpl
  functions. (Andrey)
- Fixed a regression when using strip_tags() and < is within an attribute.
  (Scott)
- Fixed a crash on invalid method in ReflectionParameter constructor.
  (Christian Seiler)
- Fixed bug #46059 (Compile failure under IRIX 6.5.30 building posix.c). 
  (Arnaud)
- Fixed bug #46053 (SplFileObject::seek - Endless loop). (Arnaud)
- Fixed bug #46051 (SplFileInfo::openFile - memory overlap). (Arnaud)
- Fixed bug #46047 (SimpleXML converts empty nodes into object with nested 
  array). (Rob)
- Fixed bug #46031 (Segfault in AppendIterator::next). (Arnaud)
- Fixed bug #46029 (Segfault in DOMText when using with Reflection). (Rob)
- Fixed bug #46010 (warnings incorrectly generated for iv in ecb mode). 
  (Felipe)
- Fixed bug #46003 (isset on nonexisting node return unexpected results). (Rob)
- Fixed bug #45956 (parse_ini_file() does not return false with syntax errors
  in parsed file). (Jani)
- Fixed bug #45901 (wddx_serialize_value crash with SimpleXMLElement object).
  (Rob)
- Fixed bug #45862 (get_class_vars is inconsistent with 'protected' and 
  'private' variables). (ilewis at uk dot ibm dot com, Felipe)
- Fixed bug #45860 (header() function fails to correctly replace all Status
  lines). (Dmitry)
- Fixed bug #45805 (Crash on throwing exception from error handler). (Dmitry)
- Fixed bug #45765 (ReflectionObject with default parameters of self::xxx cause
  an error). (Felipe)
- Fixed bug #45751 (Using auto_prepend_file crashes (out of scope stack address
  use)). (basant dot kukreja at sun dot com) 
- Fixed bug #45705 (rfc822_parse_adrlist() modifies passed address parameter).
  (Jani)
- Fixed bug #45691 (Some per-dir or runtime settings may leak into other
  requests). (Moriyoshi)
- Fixed bug #45581 (htmlspecialchars() double encoding &#x hex items). (Arnaud)